--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -23,9 +23,10 @@ jobs:
     # Runs a single command using the runners shell
     - name: installing NodeJs
       uses: actions/setup-node@v2-beta
-
+      with:
+        node-version: 12
     # Runs a set of commands using the runners shell
-    - name: Installong surge
+    - name: Installing surge
       run: npm install --globally surge
     - name: run surge
       run: surge ./ furqankhan.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
