--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -28,6 +28,6 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Installing surge
       run: npm install --globally surge
-    - name: run surge
-      run: surge ./ furqankhan.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
+    - name: Deploying using surge
+      run: surge ./ furqankhan.surge.sh --token {{ secrets.SURGE_TOKEN }}
 
