--- a/.github/workflows/automated.yml
+++ b/.github/workflows/automated.yml
@@ -24,10 +24,9 @@ jobs:
     - name: installing NodeJs
       uses: actions/setup-node@v2-beta
       with:
-        node-version: 12
-    # Runs a set of commands using the runners shell
+       node-version: 12
     - name: Installing surge
-      run: npm install --globally surge
-    - name: Deploying using surge
+      run: npm install --global surge
+    - name: Run surge
       run: surge ./ furqankhan.surge.sh --token ${{secrets.SURGE_TOKEN}}
 
